test/positive/feature_short.java

public class feature_short {
  public feature_short() {}
  protected short x;
}

