test/negative/feature_multipletypesperfile.java

public class A {
  protected int x;
}

public class B {
  protected int y;
}

